Add full Datenschutzerklärung + CSS

--- a/impressum.html
+++ b/impressum.html
@@ -15,16 +15,96 @@
         </style>
     </head>
 <body>
-    <div class="impressum">
-        <p>Angaben gemäß § 5 TMG</p>
-        <p>Gabriel Costa Soares</p>
-        <p>Rua Santa Alice 55</p>
-        <p>29101-090 Vila Velha / ES - Brasilien</p>
-        <p>Kontakt</p>
-        <p>+49 15787651099</p>
-        <p>contact@costasoares-website.com<br><br><br></p>
-        <p><a href="http://www.costasoares-website.com">Zurück zur Website</a></p>
+  
+<section class="impressum" lang="de" id="impressum">
+    <div class="impressum__container">
+  <h1>Impressum</h1>
 
+  <h2>Dienstanbieter (§ 5 TMG)</h2>
+  <p>
+    <strong>Gabriel Costa Soares</strong><br>
+    Rua Santa Alice 55<br>
+    29100-000 Vila Velha – ES<br>
+    Brasilien
+  </p>
+
+  <!-- Falls du eine Telefonnummer angeben möchtest, ergänze sie hier -->
+  <!-- <p>Telefon: +55 ?? ???? ????</p> -->
+
+  <p>
+    E-Mail:&nbsp;
+    <a href="mailto:contact@costasoares-website.com">
+      contact@costasoares-website.com
+    </a>
+  </p>
+
+  <p>
+    Website:&nbsp;
+    <a href="https://www.costasoares-website.com" target="_blank" rel="noopener">
+      www.costasoares-website.com
+    </a>
+  </p>
+
+  <h2>Haftung für Inhalte</h2>
+  <p>
+    Als Diensteanbieter bin ich gemäß § 7 Abs. 1 TMG für eigene Inhalte
+    auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich.
+    Nach §§ 8 bis 10 TMG bin ich als Diensteanbieter jedoch nicht
+    verpflichtet, übermittelte oder gespeicherte fremde Informationen
+    zu überwachen oder nach Umständen zu forschen, die auf eine
+    rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung
+    oder Sperrung der Nutzung von Informationen nach den allgemeinen
+    Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist
+    jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten
+    Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden
+    Rechtsverletzungen werde ich diese Inhalte umgehend entfernen.
+  </p>
+
+  <h2>Haftung für Links</h2>
+  <p>
+    Mein Angebot enthält Links zu externen Websites Dritter, auf deren
+    Inhalte ich keinen Einfluss habe. Deshalb kann ich für diese
+    fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der
+    verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber
+    der Seiten verantwortlich. Die verlinkten Seiten wurden zum
+    Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft.
+    Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht
+    erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten
+    Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung
+    nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werde ich
+    derartige Links umgehend entfernen.
+  </p>
+
+  <h2>Urheberrecht</h2>
+  <p>
+    Die durch den Seitenbetreiber erstellten Inhalte und Werke auf
+    diesen Seiten unterliegen dem deutschen Urheberrecht. Die
+    Vervielfältigung, Bearbeitung, Verbreitung und jede Art der
+    Verwertung außerhalb der Grenzen des Urheberrechts bedürfen der
+    schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers.
+    Downloads und Kopien dieser Seite sind nur für den privaten, nicht
+    kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser
+    Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte
+    Dritter beachtet. Insbesondere werden Inhalte Dritter als solche
+    gekennzeichnet. Solltest du trotzdem auf eine Urheberrechtsverletzung
+    aufmerksam werden, bitte ich um einen entsprechenden Hinweis.
+    Bei Bekanntwerden von Rechtsverletzungen werde ich derartige Inhalte
+    umgehend entfernen.
+  </p>
+
+  <p class="source">
+    Quelle&nbsp;der Rechtstexte:&nbsp;
+    <a href="https://www.e-recht24.de/impressum-generator.html" target="_blank" rel="noopener">
+      e-recht24.de
+    </a>
+  </p>
+     <p class="impressum__back">
+  <a href="https://www.costasoares-website.com" class="button">
+    Zurück&nbsp;zur&nbsp;Website
+  </a>
+</p>
     </div>
+</section>
+
 </body>
 </html>
