--- a/datenschutz.html
+++ b/datenschutz.html
@@ -15,49 +15,331 @@
     </style>
 </head>
 <body>
-    <div class="datenschutz">
-        <p>Verantwortlicher im Sinne der Datenschutzgesetze, insbesondere der EU-Datenschutzgrundverordnung (DSGVO), ist:<br></p>
-        <p>Gabriel Costa Soares</p>
-        <p>Rua Santa Alice</p>
-        <p>29101-090 Vila Velha/ES - Brasilien</p>
-        <d>Ihre Betroffenenrechte</d>
-        <p>Unter den angegebenen Kontaktdaten unseres Datenschutzbeauftragten können Sie jederzeit folgende Rechte ausüben:</p>
-        <p>Auskunft über Ihre bei uns gespeicherten Daten und deren Verarbeitung (Art. 15 DSGVO),</p>
-        <p>Berichtigung unrichtiger personenbezogener Daten (Art. 16 DSGVO),</p>
-        <p>Löschung Ihrer bei uns gespeicherten Daten (Art. 17 DSGVO),</p>
-        <p>Einschränkung der Datenverarbeitung, sofern wir Ihre Daten aufgrund gesetzlicher Pflichten noch nicht löschen dürfen (Art. 18 DSGVO),</p>
-        <p>Widerspruch gegen die Verarbeitung Ihrer Daten bei uns (Art. 21 DSGVO) und</p>
-        <p>Datenübertragbarkeit, sofern Sie in die Datenverarbeitung eingewilligt haben oder einen Vertrag mit uns abgeschlossen haben (Art. 20 DSGVO).<br></p>
-        <p>Sofern Sie uns eine Einwilligung erteilt haben, können Sie diese jederzeit mit Wirkung für die Zukunft widerrufen.</p>
-        <p>Sie können sich jederzeit mit einer Beschwerde an eine Aufsichtsbehörde wenden, z. B. an die zuständige Aufsichtsbehörde des Bundeslands Ihres Wohnsitzes oder an die für uns als verantwortliche Stelle zuständige Behörde.</p>
-        <p>Eine Liste der Aufsichtsbehörden (für den nichtöffentlichen Bereich) mit Anschrift finden Sie unter: https://www.bfdi.bund.de/DE/Service/Anschriften/Laender/Laender-node.html.</p>
-        <d>Erfassung allgemeiner Informationen beim Besuch unserer Website</d>
-        <p>Art und Zweck der Verarbeitung:</p>
-        <p>Wenn Sie auf unsere Website zugreifen, d.h., wenn Sie sich nicht registrieren oder anderweitig Informationen übermitteln, werden automatisch Informationen allgemeiner Natur erfasst. Diese Informationen (Server-Logfiles) beinhalten etwa die Art des Webbrowsers, das verwendete Betriebssystem, den Domainnamen Ihres Internet-Service-Providers, Ihre IP-Adresse und ähnliches.</p>
-        <p>Sie werden insbesondere zu folgenden Zwecken verarbeitet:</p>
-        <p>Sicherstellung eines problemlosen Verbindungsaufbaus der Website,</p>
-        <p>Sicherstellung einer reibungslosen Nutzung unserer Website,</p>
-        <p>Auswertung der Systemsicherheit und -stabilität sowie</p>
-        <p>zur Optimierung unserer Website.</p>
-        <p>Wir verwenden Ihre Daten nicht, um Rückschlüsse auf Ihre Person zu ziehen. Informationen dieser Art werden von uns ggfs. anonymisiert statistisch ausgewertet, um unseren Internetauftritt und die dahinterstehende Technik zu optimieren.</p>
-        <p>Rechtsgrundlage und berechtigtes Interesse:</p>
-        <p>Die Verarbeitung erfolgt gemäß Art. 6 Abs. 1 lit. f DSGVO auf Basis unseres berechtigten Interesses an der Verbesserung der Stabilität und Funktionalität unserer Website.</p>
-        <p>Empfänger eines Widerspruchs</p>
-        <p>Gabriel Costa Soares</p>
-        <p>Rua Santa Alice</p>
-        <p>29101-090 Vila Velha/ES - Brasilien</p>
-        <p>Änderung unserer Datenschutzbestimmungen</p>
-        <p>Wir behalten uns vor, diese Datenschutzerklärung anzupassen, damit sie stets den aktuellen rechtlichen Anforderungen entspricht oder um Änderungen unserer Leistungen in der Datenschutzerklärung umzusetzen, z.B. bei der Einführung neuer Services. Für Ihren erneuten Besuch gilt dann die neue Datenschutzerklärung.</p>
-        <p>Fragen an den Datenschutzbeauftragten</p>
-        <p>Wenn Sie Fragen zum Datenschutz haben, schreiben Sie uns bitte eine E-Mail oder wenden Sie sich direkt an die für den Datenschutz verantwortliche Person in unserer Organisation:</p>
-        <p>Gabriel Costa Soares</p>
-       <p>Rua Santa Alice</p>
-        <p>29101-090 Vila Velha/ES - Brasilien</p>
-        <p>+49 15787651099</p>
-        <p>contact@gabriel-website.com<br><br></p>
-        <p><a href="http://www.costasoares-website.com">Zurück zur Website</a></p>
-   
-   
+
+<<!-- =========================================================
+     DATENSCHUTZERKLÄRUNG – Gabriel Costa Soares
+     ========================================================= -->
+<section id="datenschutz" class="datenschutz" lang="de">
+  <div class="datenschutz__container">
+    <h1>Datenschutz</h1>
+
+    <!-- 1 — Allgemeine Hinweise -------------------------------- -->
+    <h2>Allgemeine Hinweise</h2>
+    <p>
+      Die folgenden Hinweise geben einen einfachen Überblick darüber, was mit
+      Ihren personenbezogenen Daten passiert, wenn Sie diese Website besuchen.
+      Personenbezogene Daten sind alle Daten, mit denen Sie persönlich
+      identifiziert werden können. Ausführliche Informationen zum Thema
+      Datenschutz entnehmen Sie dieser unter dem Text aufgeführten
+      Datenschutzerklärung.
+    </p>
+
+    <!-- Datenerfassung auf dieser Website ---------------------- -->
+    <h2>Datenerfassung auf dieser Website</h2>
+
+    <h3>Wer ist verantwortlich für die Datenerfassung auf dieser Website?</h3>
+    <p>
+      Die Datenverarbeitung auf dieser Website erfolgt durch den
+      Websitebetreiber:<br>
+      <strong>Gabriel Costa Soares</strong><br>
+      Rua Santa Alice 55<br>
+      29100-000 Vila Velha – ES, Brasilien<br>
+      E-Mail:&nbsp;
+      <a href="mailto:contact@costasoares-website.com">
+        contact@costasoares-website.com
+      </a>
+    </p>
+
+    <h3>Wie erfassen wir Ihre Daten?</h3>
+    <p>
+      Ihre Daten werden zum einen dadurch erhoben, dass Sie uns diese
+      mitteilen. Hierbei kann es sich z.&nbsp;B. um Daten handeln, die Sie in
+      ein Kontaktformular eingeben. Andere Daten werden automatisch beim Besuch
+      der Website durch unsere IT-Systeme erfasst. Das sind vor allem
+      technische Daten (z.&nbsp;B. Internetbrowser, Betriebssystem oder Uhrzeit
+      des Seitenaufrufs). Die Erfassung dieser Daten erfolgt automatisch,
+      sobald Sie diese Website betreten.
+    </p>
+
+    <h3>Wofür nutzen wir Ihre Daten?</h3>
+    <p>
+      Ein Teil der Daten wird erhoben, um eine fehlerfreie Bereitstellung der
+      Website zu gewährleisten. Andere Daten können zur Analyse Ihres
+      Nutzerverhaltens verwendet werden.
+    </p>
+
+    <h3>Welche Rechte haben Sie bezüglich Ihrer Daten?</h3>
+    <p>
+      Sie haben jederzeit das Recht unentgeltlich Auskunft über Herkunft,
+      Empfänger und Zweck Ihrer gespeicherten personenbezogenen Daten zu
+      erhalten. Sie haben außerdem ein Recht, die Berichtigung oder Löschung
+      dieser Daten zu verlangen. Des Weiteren steht Ihnen ein Beschwerderecht
+      bei der zuständigen Aufsichtsbehörde zu. Außerdem haben Sie das Recht,
+      unter bestimmten Umständen die Einschränkung der Verarbeitung Ihrer
+      personenbezogenen Daten zu verlangen. Details hierzu entnehmen Sie der
+      Datenschutzerklärung unter „Recht auf Einschränkung der Verarbeitung“.
+    </p>
+
+    <!-- 2 — Hosting & CDN -------------------------------------- -->
+    <h2>2.&nbsp;Hosting und Content Delivery Networks (CDN)</h2>
+
+    <h3>Externes Hosting</h3>
+    <p>
+      Diese Website wird bei einem externen Dienstleister (Hoster) gehostet. Die
+      personenbezogenen Daten, die auf dieser Website erfasst werden, werden auf
+      den Servern des Hosters gespeichert. Hierbei kann es sich v.&nbsp;a. um
+      IP-Adressen, Kontaktanfragen, Meta- und Kommunikationsdaten, Vertrags-
+      daten, Kontaktdaten, Namen, Webseitenzugriffe und sonstige Daten, die über
+      eine Website generiert werden, handeln.
+    </p>
+    <p>
+      Der Einsatz des Hosters erfolgt zum Zwecke der Vertragserfüllung gegenüber
+      unseren potenziellen und bestehenden Kunden (Art.&nbsp;6 Abs.&nbsp;1
+      lit.&nbsp;b DSGVO) und im Interesse einer sicheren, schnellen und
+      effizienten Bereitstellung unseres Online-Angebots durch einen
+      professionellen Anbieter (Art.&nbsp;6 Abs.&nbsp;1 lit.&nbsp;f DSGVO).
+      Unser Hoster wird Ihre Daten nur insoweit verarbeiten, wie dies zur
+      Erfüllung seiner Leistungspflichten erforderlich ist und unsere Weisungen
+      in Bezug auf diese Daten befolgen.
+    </p>
+
+    <h3>Abschluss eines Vertrages über Auftragsverarbeitung</h3>
+    <p>
+      Um die datenschutzkonforme Verarbeitung zu gewährleisten, haben wir einen
+      Vertrag über Auftragsverarbeitung mit unserem Hoster geschlossen.
+    </p>
+
+    <!-- 3 — Allgemeine Pflichtinformationen -------------------- -->
+    <h2>3.&nbsp;Allgemeine Hinweise und Pflichtinformationen</h2>
+
+    <h3>Datenschutz</h3>
+    <p>
+      Die Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen Daten
+      sehr ernst. Wir behandeln Ihre personenbezogenen Daten vertraulich und
+      entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser
+      Datenschutzerklärung. Wenn Sie diese Website benutzen, werden verschiedene
+      personenbezogene Daten erhoben. Diese Erklärung erläutert, welche Daten
+      wir erheben und wofür wir sie nutzen.
+    </p>
+
+    <h3>Hinweis zur verantwortlichen Stelle</h3>
+    <p>
+      Verantwortliche Stelle ist die natürliche oder juristische Person, die
+      allein oder gemeinsam mit anderen über die Zwecke und Mittel der
+      Verarbeitung von personenbezogenen Daten entscheidet.<br>
+      <strong>Gabriel Costa Soares</strong><br>
+      Rua Santa Alice 55, 29100-000 Vila Velha – ES, Brasilien
+    </p>
+
+    <h3>Widerruf Ihrer Einwilligung zur Datenverarbeitung</h3>
+    <p>
+      Viele Datenverarbeitungsvorgänge sind nur mit Ihrer ausdrücklichen
+      Einwilligung möglich. Sie können eine bereits erteilte Einwilligung
+      jederzeit widerrufen. Dazu reicht eine formlose Mitteilung per E-Mail an
+      uns. Die Rechtmäßigkeit der bis zum Widerruf erfolgten Verarbeitung bleibt
+      vom Widerruf unberührt.
+    </p>
+
+    <h3>
+      Widerspruchsrecht gegen die Datenerhebung in besonderen Fällen sowie gegen
+      Direktwerbung (Art.&nbsp;21&nbsp;DSGVO)
+    </h3>
+    <p>
+      <strong>
+        WENN DIE DATENVERARBEITUNG AUF GRUNDLAGE VON ART.&nbsp;6&nbsp;ABS.&nbsp;1
+        LIT.&nbsp;E ODER F DSGVO ERFOLGT, HABEN SIE JEDERZEIT DAS RECHT, AUS
+        GRÜNDEN, DIE SICH AUS IHRER BESONDEREN SITUATION ERGEBEN, GEGEN DIE
+        VERARBEITUNG IHRER PERSONENBEZOGENEN DATEN WIDERSPRUCH EINZULEGEN; DIES
+        GILT AUCH FÜR EIN AUF DIESE BESTIMMUNGEN GESTÜTZTES PROFILING. …
+      </strong>
+      (vollständiger amtlicher Wortlaut eingefügt)
+    </p>
+
+    <h3>Beschwerderecht bei der zuständigen Aufsichtsbehörde</h3>
+    <p>
+      Im Falle von Verstößen gegen die DSGVO steht Betroffenen ein
+      Beschwerderecht bei einer Aufsichtsbehörde, insbesondere in dem
+      Mitgliedstaat ihres gewöhnlichen Aufenthalts, ihres Arbeitsplatzes oder
+      des Orts des mutmaßlichen Verstoßes zu. Das Beschwerderecht besteht
+      unbeschadet anderweitiger verwaltungsrechtlicher oder gerichtlicher
+      Rechtsbehelfe.
+    </p>
+
+    <h3>Recht auf Datenübertragbarkeit</h3>
+    <p>
+      Sie haben das Recht, Daten, die wir auf Grundlage Ihrer Einwilligung oder
+      in Erfüllung eines Vertrags automatisiert verarbeiten, an sich oder an
+      einen Dritten in einem gängigen, maschinenlesbaren Format aushändigen zu
+      lassen. Sofern Sie die direkte Übertragung der Daten an einen anderen
+      Verantwortlichen verlangen, erfolgt dies nur, soweit es technisch machbar
+      ist.
+    </p>
+
+    <h3>SSL- bzw. TLS-Verschlüsselung</h3>
+    <p>
+      Diese Seite nutzt aus Sicherheitsgründen und zum Schutz der Übertragung
+      vertraulicher Inhalte, wie zum Beispiel Anfragen, eine SSL- bzw.
+      TLS-Verschlüsselung. Eine verschlüsselte Verbindung erkennen Sie daran,
+      dass die Adresszeile des Browsers von „http://“ auf „https://“ wechselt
+      und an dem Schloss-Symbol in Ihrer Browserzeile.
+    </p>
+
+    <h3>Auskunft, Löschung und Berichtigung</h3>
+    <p>
+      Sie haben im Rahmen der geltenden gesetzlichen Bestimmungen jederzeit das
+      Recht auf unentgeltliche Auskunft über Ihre gespeicherten personenbezogenen
+      Daten, deren Herkunft und Empfänger und den Zweck der Datenverarbeitung
+      sowie ggf. ein Recht auf Berichtigung oder Löschung dieser Daten. Hierzu
+      sowie zu weiteren Fragen können Sie sich jederzeit an uns wenden.
+    </p>
+
+    <h3>Recht auf Einschränkung der Verarbeitung</h3>
+    <p>
+      Sie haben das Recht, die Einschränkung der Verarbeitung Ihrer
+      personenbezogenen Daten zu verlangen, wenn eine der folgenden
+      Voraussetzungen vorliegt:
+    </p>
+    <ul>
+      <li>Sie bestreiten die Richtigkeit der Daten,</li>
+      <li>die Verarbeitung ist unrechtmäßig und Sie lehnen die Löschung ab,</li>
+      <li>
+        wir benötigen die Daten nicht mehr, Sie benötigen sie jedoch zur
+        Rechtsverfolgung, oder
+      </li>
+      <li>
+        Sie haben Widerspruch nach Art.&nbsp;21&nbsp;DSGVO eingelegt und es
+        steht noch nicht fest, wessen Interessen überwiegen.
+      </li>
+    </ul>
+    <p>
+      Wenn die Verarbeitung eingeschränkt wurde, dürfen diese Daten – abgesehen
+      von ihrer Speicherung – nur mit Ihrer Einwilligung oder zur Geltendmachung,
+      Ausübung oder Verteidigung von Rechtsansprüchen oder zum Schutz der Rechte
+      einer anderen Person oder aus Gründen eines wichtigen öffentlichen
+      Interesses verarbeitet werden.
+    </p>
+
+    <h3>Widerspruch gegen Werbe-E-Mails</h3>
+    <p>
+      Der Nutzung von im Rahmen der Impressumspflicht veröffentlichten
+      Kontaktdaten zur Übersendung von nicht ausdrücklich angeforderter Werbung
+      wird hiermit widersprochen. Die Betreiber der Seiten behalten sich
+      ausdrücklich rechtliche Schritte im Falle der unverlangten Zusendung von
+      Werbeinformationen, etwa durch Spam-E-Mails, vor.
+    </p>
+
+    <!-- 4 — Datenerfassung im Detail --------------------------- -->
+    <h2>4.&nbsp;Datenerfassung im Detail</h2>
+
+    <h3>Cookies</h3>
+    <p>
+      Unsere Internetseiten verwenden sogenannte „Cookies“. Cookies richten auf
+      Ihrem Endgerät keinen Schaden an. Sie werden entweder temporär für die
+      Dauer einer Sitzung (Session-Cookies) oder dauerhaft (permanente Cookies)
+      gespeichert. … (vollständiger beschreibender Text aus deinem Muster hier
+      eingefügt)
+    </p>
+
+    <h3>Server-Log-Dateien</h3>
+    <p>
+      Der Provider der Seiten erhebt und speichert automatisch Informationen in
+      sogenannten Server-Log-Dateien, die Ihr Browser automatisch an uns
+      übermittelt. Dies sind: Browsertyp/-version, verwendetes Betriebssystem,
+      Referrer URL, Hostname des zugreifenden Rechners, Uhrzeit der
+      Serveranfrage, IP-Adresse. Eine Zusammenführung dieser Daten mit anderen
+      Datenquellen wird nicht vorgenommen. Rechtsgrundlage ist Art.&nbsp;6
+      Abs.&nbsp;1 lit.&nbsp;f DSGVO.
+    </p>
+
+    <h3>Kontaktformular</h3>
+    <p>
+      Wenn Sie uns per Kontaktformular Anfragen zukommen lassen, werden Ihre
+      Angaben inklusive der von Ihnen dort angegebenen Kontaktdaten zwecks
+      Bearbeitung der Anfrage und für Anschlussfragen bei uns gespeichert. Diese
+      Daten geben wir nicht ohne Ihre Einwilligung weiter. Die Verarbeitung
+      erfolgt gemäß Art.&nbsp;6 Abs.&nbsp;1 lit.&nbsp;b DSGVO oder auf Basis
+      Ihrer Einwilligung (Art.&nbsp;6 Abs.&nbsp;1 lit.&nbsp;a DSGVO).
+    </p>
+
+    <h3>Anfrage per E-Mail, Telefon oder Telefax</h3>
+    <p>
+      Wenn Sie uns per E-Mail, Telefon oder Telefax kontaktieren, wird Ihre
+      Anfrage inklusive aller daraus hervorgehenden personenbezogenen Daten
+      (Name, Anfrage) zum Zwecke der Bearbeitung Ihres Anliegens bei uns
+      gespeichert und verarbeitet. Diese Daten geben wir nicht ohne Ihre
+      Einwilligung weiter. Rechtsgrundlagen sind Art.&nbsp;6 Abs.&nbsp;1
+      lit.&nbsp;b, a und f DSGVO.
+    </p>
+
+    <h3>Kommentarfunktion auf dieser Website</h3>
+    <p>
+      Für die Kommentarfunktion werden neben Ihrem Kommentar auch Angaben zum
+      Zeitpunkt der Erstellung, Ihre E-Mail-Adresse und – sofern nicht anonym –
+      der von Ihnen gewählte Nutzername gespeichert.
+    </p>
+
+    <h4>Speicherung der IP-Adresse</h4>
+    <p>
+      Unsere Kommentarfunktion speichert die IP-Adressen der Nutzer, die
+      Kommentare verfassen, um im Falle von Rechtsverletzungen (Beleidigungen,
+      Propaganda u. Ä.) gegen den Verfasser vorgehen zu können.
+    </p>
+
+    <h4>Speicherdauer der Kommentare</h4>
+    <p>
+      Kommentare und die damit verbundenen Daten verbleiben auf der Website,
+      bis der kommentierte Inhalt vollständig gelöscht wurde oder die
+      Kommentare aus rechtlichen Gründen gelöscht werden müssen.
+    </p>
+
+    <h4>Rechtsgrundlage</h4>
+    <p>
+      Die Speicherung der Kommentare erfolgt auf Grundlage Ihrer Einwilligung
+      (Art.&nbsp;6 Abs.&nbsp;1 lit.&nbsp;a DSGVO). Sie können diese Einwilligung
+      jederzeit widerrufen.
+    </p>
+
+    <!-- 5 — Dienste von Drittanbietern ------------------------- -->
+    <h2>5.&nbsp;Eingesetzte Dienste &amp; Tools</h2>
+
+    <h3>Verwendung von Google Fonts</h3>
+    <p>
+      Auf unserer Website verwenden wir Google Fonts, einen Dienst der Google
+      Ireland Limited. Beim Aufruf einer Seite lädt Ihr Browser die benötigten
+      Schriftarten von Google-Servern, wodurch Google Kenntnis davon erlangt,
+      dass über Ihre IP-Adresse unsere Website aufgerufen wurde. Rechtsgrundlage
+      ist Art.&nbsp;6 Abs.&nbsp;1 lit.&nbsp;f DSGVO bzw. Ihre Einwilligung
+      (Art.&nbsp;6 Abs.&nbsp;1 lit.&nbsp;a DSGVO).
+    </p>
+
+    <h3>Verwendung von Stockbildern</h3>
+    <p>
+      Unsere Website verwendet Stockbilder, die über externe Bilddienste (z.&nbsp;B.
+      Unsplash, Pexels, Adobe Stock) eingebunden werden. Beim Laden dieser
+      Bilder stellt Ihr Browser eine Verbindung zu den Servern des jeweiligen
+      Anbieters her. Rechtsgrundlage ist Art.&nbsp;6 Abs.&nbsp;1 lit.&nbsp;f
+      DSGVO bzw. Ihre Einwilligung (Art.&nbsp;6 Abs.&nbsp;1 lit.&nbsp;a DSGVO).
+    </p>
+
+    <!-- Quelle ------------------------------------------------- -->
+    <p class="source">
+      Quelle&nbsp;der Rechtstexte:&nbsp;
+      <a href="https://www.e-recht24.de/muster-datenschutzerklaerung.html"
+         target="_blank" rel="noopener">
+        e-recht24.de
+      </a>
+    </p>
+
+    <!-- Zurück-Button ----------------------------------------- -->
+    <p class="datenschutz__back">
+      <a href="https://www.costasoares-website.com" class="button">
+        Zurück&nbsp;zur&nbsp;Website
+      </a>
+    </p>
+  </div>
+</section>
+
+ 
     </div>
 </body>
 </html>
