Add full Datenschutzerklärung + CSS 2

--- a/index.html
+++ b/index.html
@@ -372,11 +372,11 @@
                                 <p>contact@costasoares-website.com</p>
                             </div>
 
-                            <div class="impressum">
+                            <div class="impressum_link">
                                 <p><a href="https://costasoares-website.com/impressum">Impressum</a></p>
                             </div>
 
-                            <div class="datenschutz">
+                            <div class="datenschutz_link">
                                 <p><a href="https://costasoares-website.com/datenschutz">Datenschutzerklärung</a></p>
                             </div>
                 
